    Many thanks to Lincoln Baxter who did most of the hard work and testing
    and to Jeff Urlwin and others who also helped out.
    Perl 5.8.x and Oracle 9+ are highly recommended if you want to use Unicode.
    See POD for more information and documentation.
  Added support for "... RETURNING lob_locator_column INTO ?"
    using $sth->bind_param_inout(2, \$loc, 0, {ora_type => ORA_BLOB});
  Added bind_param() support for SQL_BLOB & SQL_CLOB thanks to Stephen Clouse.
  Added $dbh->ora_can_unicode and $dbh->ora_nls_parameters thanks to Andy Hassall.

  Documentation changes:
    Corrected typo in ora_lob_read() example thanks to Johannes Wierny.
    Corrected LOB example thanks to Sascha Pfalz and Thomas Upton.
    Updated README.macosx thanks to Hilmar Lapp.
    Added $dbh->reauthenticate($user,$pass) docs thanks to Andy Hassall.
    Added $dbh->{ora_parse_error_offset} docs thanks to Andy Hassall.
    Added gcc example to README.aix thanks to Adrian Terranova.

  Build Changes:
    Fixed build32/build64 Makefile.PL bug spotted by Sean Kelly.
    Fixed Oracle version detection on clients thanks to Marko Asplund.
    Fixed Oracle 10 version detection on clients thanks to Andy Hassall.
    Fixed HP-UX 64bit build issues thanks to Weiguo Sun.
    Fixed VMS build issues thanks to Jakob Snoer.
    Fixed suprious warning from Makefile.PL thanks to Marko Asplund.
    Fixed compiler warnings thanks to Robert Baron.
    Fixed oci.def for Cygwin by adding OCILobWriteAppend thanks to Gert-Jan Paulissen.
    Changed to use ANSI C prototypes thanks to Steffen Goeldner.
    Changed to not warn if ORACLE_HOME env var is not defined
      as it's not used with Oracle's new 'Instant Client'.
    Added Test::More as a prerequisite module.
    Added many Unicode related tests thanks to Lincoln Baxter.

=head1 Changes in DBD-Oracle 1.15   27th January 2004

  NOTE: DBD::Oracle now requires DBI version 1.28 (June 2002) or later.
